# DeepBridge

./: .gitignore  .readthedocs.yaml  ALTERACOES_RUN_INDIVIDUAL_TESTS.md  ANALYSIS_EXECUTIVE_SUMMARY.txt  ANALYSIS_INDEX.md  CHANGELOG.md  CODEBASE_ANALYSIS_REPORT.md  CORRECOES_OVERVIEW_RESILIENCE.md  CORREÇÃO_REPORT_TYPES.md  FAIRNESS_MODULE_IMPLEMENTADO.md  FAIRNESS_PRODUCTION_ANALYSIS_README.md  FASE1_FAIRNESS_METRICAS_IMPLEMENTADAS.md  FASE2_FAIRNESS_SUITE_IMPLEMENTADA.md  FASE3_FAIRNESS_VISUALIZACOES_IMPLEMENTADAS.md  FASE4_FAIRNESS_REPORTS_IMPLEMENTADO.md  FASE5_FAIRNESS_INTEGRACAO_EXPERIMENT.md  FASE6_DOCUMENTACAO_EXEMPLOS_CONCLUIDA.md  FINAL_SUMMARY_PHASE3.md  HPM_COMPONENTS_INITIALIZATION.md  HPM_DISTILLATION_PROCESS.md  HPM_INITIALIZATION_FLOW.md  IMPLEMENTACAO_COMPLETA_RESUMO.md  INTERACTIVE_REPORT_REFACTORING_PLAN.md  MELHORIAS_ROBUSTNESS_DEEPBRIDGE.md  OTIMIZACAO_TESTES_DEEPBRIDGE.md  OTIMIZACOES_IMPLEMENTADAS.md  PHASE2_PHASE3_COMPLETE.md  PLANO_COMPLETO_FAIRNESS_IMPLEMENTACAO.md  PLANO_IMPLEMENTACAO_HPM_KD.md  PROBLEMA_RESOLVIDO_RESILIENCE_REPORTS.md  PROJECT_COMPLETE_SUMMARY.md  PROPOSTA_HPM_DISTILLATION.md  PR_DESCRIPTION.md  PR_PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_RENDERERS_ANALYSIS.md  REFACTORING_PATTERN_STATIC_RENDERERS.md  REFACTORING_PLAN_RESILIENCE_REPORT.md  RENDERERS_ANALYSIS.md  (+33 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: pipeline.yaml
benchmarks/: hpm_performance_benchmark.py
deepbridge/: CLAUDE.md  __init__.py  auto_distiller.py  data.py  db_data.py  experiment.py  model_assets.py  model_distiller.py  model_validation.py
deepbridge/auto/: config.py  experiment_runner.py  metrics.py  reporting.py  visualization.py
deepbridge/cli/: __init__.py
deepbridge/config/: settings.py
deepbridge/core/: base_processor.py  db_data.py  experiment.py  standard_processor.py
deepbridge/distillation/: __init__.py  auto_distiller.py
deepbridge/examples/: experiment_example.py  report_generation_example.py  robustness_experiment_example.py  robustness_experiment_with_iterations.py  simple_experiment.py  simple_report_from_dict.py  test_auc_fix.py  test_auc_fix_experiment.py  test_report_metrics.py  uncertainty_report_example.py  uncertainty_visualization_example.py
deepbridge/metrics/: classification.py  evaluator.py
deepbridge/models/: onnx_wrapper.py
deepbridge/reports/: test_metrics_report.html  test_resilience_report.html
deepbridge/static/: assets
deepbridge/synthetic/: __init__.py  base.py  synthesizer.py
deepbridge/templates/: base.html  report_robustness.html
deepbridge/utils/: __init__.py  dataset_factory.py  feature_manager.py  html_report_generator.py  hyperparameter.py  model_handler.py  model_registry.py  report_from_results.py  resilience.py  robustness.py  uncertainty.py
deepbridge/visualizer/: distribution_visualizer.py
desenvolvimento/refatoracao/: ACOES_MANUAIS_PENDENTES.md  ANUNCIO_v2.0.0.md  CONCLUSAO_FASE_5_AUTOMATICA.md  ESTRUTURA_REPOSITORIOS.md  FAQ_V2.md  FASE_2_MIGRACAO_CODIGO.md  FASE_6_RESUMO_FINAL.md  GUIA_RAPIDO.md  INDICE_PROMPTS_AUTOMATICOS.md  INSTRUCOES_LABELS_GITHUB.md  INSTRUCOES_PUBLICACAO_MANUAL.md  PLANO_CONTINGENCIA.md  PROMPT_FASE_2_AUTOMATICO.md  PROMPT_FASE_3_AUTOMATICO.md  PROMPT_FASE_4_AUTOMATICO.md  PROMPT_FASE_5_AUTOMATICO.md  PROMPT_FASE_6_AUTOMATICO.md  README_PROMPTS.md  RELATORIO_PENDENCIAS.md  RELEASE_NOTES_v2.0.0.md  RESUMO_EXECUCAO_FASE_5.md  RESUMO_FASE_5.md  RESUMO_FASE_6.md  STATUS_COMPLETO_MIGRACAO.md  STATUS_FINAL_FASE_5.md  TAREFAS_PENDENTES_FASE6.md  WORKFLOW_BUGFIX.md  criar_github_releases.sh  publicar_pypi.sh
desenvolvimento/refatorar/: 01_REPORT_GENERATION.md  MIGRATION_GUIDE_REPORT_GENERATION.md
desenvolvimento/scripts/: check_health.sh  collect_metrics.sh  create_github_labels.sh
docs/: ANALISE_MELHORIAS_DEEPBRIDGE.md  FAIRNESS_BEST_PRACTICES.md  FAIRNESS_FAQ.md  FAIRNESS_TUTORIAL.md  contributing.md  hpm_distillation.md  index.md  license.md
docs/advanced/: custom_models.md  deployment.md  optimization.md
docs/api/: auto_distiller.md  base_processor_documentation.md  cli.md  complete_reference.md  component_integration_guide.md  db_data.md  (+15 more)
examples/: Analysis of the Effect of Temperature on Distillation.ipynb  AutoDistiller Demo - Using Pre-calculated Probabilities.ipynb  AutoDistiller Demo - Using a Pre-trained Model.ipynb  Basic Synthetic Data Generation with DeepBridge.ipynb  DeepBridge DBDataset and Experiment Demo.ipynb  DeepBridge Tutorial - Part 1: Dataset Handling and Basic Experiment.ipynb  DeepBridge Tutorial - Part 2: Dataset Handling and Basic Experiment.ipynb  DeepBridge Tutorial - Part 3: Comparing Distillation Methods.ipynb  IMPLEMENTACAO_FASE1_COMPLETA.md  IMPLEMENTACAO_FASE2_COMPLETA.md  MAPA_FUNCIONALIDADES_CORE.md  NOTEBOOKS_INDEX.md  NOTEBOOKS_PLANEJAMENTO.md  PLANEJAMENTO_EXEMPLOS_CORE.md  README.md  Robustness Testing.ipynb  SUMARIO_EXEMPLOS_CORE.md  Synthetic_Data_Generation.ipynb  Understanding the Experiment Class in DeepBridge.ipynb  auto_distillation_demo.ipynb  best_distilled_model.pkl  combined_example.md  distilled_model.pkl  example_adversarial_testing.py  fairness_complete_example.py  fairness_example.py  fairness_testing_example.py  hpm_distillation_example.py  incerteza.py  note1.ipynb  quickstart.ipynb  report_hyperparameters.html  report_resilience.html  report_robustness.html  robustness_advanced_example.py  robustness_example.py  robustness_report.html  testar_incerteza.py
fairness_quick_analysis/: fairness_report.html
planejamento_IA/: CASOS_DE_USO.md  IMPLEMENTACAO_TOOLS.md  PROPOSTA_INTEGRACAO_LANGCHAIN.md  README.md  ROADMAP_IMPLEMENTACAO.md
reports/: fairness_report.html  robustness_report.html
scripts/: check_health.sh  collect_metrics.sh  create_github_labels.sh  fix_chart_urls.py
test_integration_output/: fairness_integration_report.html
test_reports_output/: fairness_report.html  fairness_report_full.html  fairness_report_medium.html  fairness_report_quick.html
tests/: conftest.py  test_hpm_components.py  test_hpm_integration.py
(+609 files in other folders)
