[tool.poetry]
name = "deepbridge"
version = "2.0.0-alpha.1"
description = "DeepBridge: Model Validation Toolkit for Machine Learning"
authors = ["Team DeepBridge <gustavo.haase@gmail.com>"]
readme = "README.md"
packages = [{include = "deepbridge"}]
exclude = [
    "simular_lib/**",
    ".claude/**",
    ".github/**",
    ".vscode/**",
    "academic/**",
    "papers/**",
    "planejamento_doc/**",
    "scripts/**",
    "tests/**",
    "deepbridge/deprecated/**"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.urls]
"Documentação" = "https://deepbridge.readthedocs.io/en/latest/"
"Código" = "https://github.com/DeepBridge-Validation/DeepBridge"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = ">=0.9.0"
numpy = ">=1.24.0,<2.1"
pandas = ">=2.0.0,<=2.2.2"
scikit-learn = ">=1.3.0"
xgboost = ">=2.0.0"
scipy = ">=1.11.0"
rich = ">=13.0.0"
joblib = ">=1.3.0"
optuna = ">=3.0.0"
matplotlib = ">=3.7.0"
tabulate = ">=0.9.0"
seaborn = ">=0.12.0"
jinja2 = ">=3.1.0"
setuptools = ">=65.0.0"
plotly = ">=5.14.0"
statsmodels = ">=0.14.0"
# REMOVED: dask (moved to deepbridge-synthetic)
# REMOVED: pyarrow (moved to deepbridge-synthetic)
onnxruntime = ">=1.15.0"
pydantic = ">=2.0.0"
weasyprint = ">=60.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.0"
taskipy = "^1.14.1"
torch = "^2.9.0"
torchvision = "^0.24.0"
pytest-asyncio = "^1.2.0"
aif360 = "^0.6.1"
fairlearn = "^0.13.0"
mypy = "^1.19.1"
ruff = "^0.15.0"
pylint = "^4.0.4"
pre-commit = "^4.5.1"
radon = "^6.0.1"
types-requests = "^2.32.4.20260107"
types-setuptools = "^80.10.0.20260124"
types-tabulate = "^0.9.0.20241207"
types-jinja2 = "^2.11.9"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.4"
mkdocstrings = "^0.28.0"
mkdocstrings-python = "^1.15.0"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts =  "--doctest-modules"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest tests/ -s -x --cov=deepbridge -vv"
post_test = "coverage html"
format = "blue . && isort ."
type-check = "mypy deepbridge/"
lint-ruff = "ruff check deepbridge/"
lint-pylint = "pylint deepbridge/"
lint-all = "task lint && task lint-ruff"
quality = "task format && task lint-all && task type-check && task test"
metrics = "bash desenvolvimento/qualidade/scripts/show_metrics.sh"

# MyPy Configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Start with relaxed mode, will enable strict in Phase 2
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true

# Ignore libraries without stubs
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "pandas.*",
    "sklearn.*",
    "xgboost.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "statsmodels.*",
    "dask.*",
    "optuna.*",
    "onnxruntime.*",
    "weasyprint.*",
    "aif360.*",
    "fairlearn.*",
    "joblib.*",
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true

# Coverage Configuration
[tool.coverage.run]
source = ["deepbridge"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/setup.py",
    "*/deprecated/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 35
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"

# Ruff Configuration
[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by blue)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["S101", "ARG001"]

# Pylint Configuration
[tool.pylint.main]
py-version = "3.10"
jobs = 0
ignore-paths = [
    "^tests/.*$",
    "^.*/__pycache__/.*$",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (will add in Phase 4)
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-branches = 15
max-statements = 60